working version before UI refactor